修改通用化文件
